[package]
name = "rerun-loader-collada-file"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
mesh-loader = "0.1.13"
rerun = { path = "../../../crates/top/rerun" }

anyhow = "1.0"
argh = "0.1"

[lints]
workspace = true
